# MiniGames

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  out.txt
assets/chess/: download.py
include/Chess/: Board.hpp  Chess.hpp  Piece.hpp  Pieces.hpp
include/Chess/Pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp  Tower.hpp
include/Reversi/: Board.hpp
include/Tools/: Position.hpp  Terminal.hpp
src/: main.cpp
src/Chess/: Board.cpp  Chess.cpp  Game.cpp  Instance.cpp  Piece.cpp
src/Chess/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Tower.cpp
src/SFML/: Window.cpp
src/Tools/: Position.cpp  Terminal.cpp
src/chess/: chess.cpp  header.cpp
